--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/framework-bundle": "5.2.*",
         "symfony/property-access": "5.2.*",
         "symfony/serializer": "5.2.*",
+        "symfony/validator": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
