returns json responses for all exceptions

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    api_exception_subscriber:
+        class: App\Subscriber\ApiExceptionSubscriber
+        arguments: [ ]
+        tags:
+            - { name: kernel.event_subscriber }
