--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,11 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "adamquaile/behat-command-runner-extension": "*@dev",
+        "behat/behat": "^3.8",
+        "behatch/contexts": "^3.3",
+        "friends-of-behat/mink-browserkit-driver": "^1.4",
+        "friends-of-behat/symfony-extension": "^2.1",
         "friendsofphp/php-cs-fixer": "^v2.17.1",
         "phpstan/phpstan": "0.12.62",
         "phpstan/phpstan-phpunit": "0.12.17",
