--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,19 +13,12 @@ services:
   php:
     build:
       context: .
-      args:
-        - WITH_XDEBUG=true
-    env_file: ../.env
+    #env_file: ../.env.test
     volumes:
       - ../:/var/www/html/
-    environment:
-      POSTGRES_HOST: ${POSTGRES_HOST}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DB}
-      XDEBUG_SESSION: PHPSTORM
     depends_on:
       - symfony-todo-rest-database
+      - symfony-todo-rest-test-database
     stdin_open: true
     tty: true
   symfony-todo-rest-database:
@@ -37,3 +30,12 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5566:5432"
+  symfony-todo-rest-test-database:
+    image: postgres:13
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}_test
+    ports:
+      - "5567:5432"
