--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,4 @@
-
 APP_ENV=test
 
-DATABASE_NAME=symfony_todo_rest_test
-DATABASE_URL="postgresql://symfony_todo_rest:pass@symfony-todo-rest-test-database:5432/${DATABASE_NAME}?serverVersion=13&charset=utf8"
+KERNEL_CLASS='App\Kernel'
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/data/test.sqlite"
