--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "license": "proprietary",
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.0",
         "ext-json": "*",
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
@@ -24,15 +24,13 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-        "adamquaile/behat-command-runner-extension": "*@dev",
-        "behat/behat": "^3.8",
-        "behatch/contexts": "^3.3",
-        "friends-of-behat/mink-browserkit-driver": "^1.4",
-        "friends-of-behat/symfony-extension": "^2.1",
+        "doctrine/data-fixtures": "^1.4",
         "friendsofphp/php-cs-fixer": "^v2.17.1",
         "phpstan/phpstan": "0.12.62",
         "phpstan/phpstan-phpunit": "0.12.17",
-        "symfony/maker-bundle": "^1.25"
+        "symfony/browser-kit": "5.2.*",
+        "symfony/maker-bundle": "^1.25",
+        "symfony/phpunit-bridge": "^5.2"
     },
     "config": {
         "optimize-autoloader": true,
