--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,7 +17,8 @@ services:
       - ../:/var/www/html/
     depends_on:
       - symfony-todo-rest-database
-      - symfony-todo-rest-test-database
+    environment:
+      PHP_CS_FIXER_IGNORE_ENV: "true" # necessary until full PHP 8 support in php-cs-fixer
     stdin_open: true
     tty: true
   symfony-todo-rest-database:
@@ -29,12 +30,3 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5566:5432"
-  symfony-todo-rest-test-database:
-    image: postgres:13
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DB}_test
-    ports:
-      - "5567:5432"
