--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,13 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "check": [
+            "@cs-check",
+            "@analyse"
+        ],
+        "cs-check": "php-cs-fixer fix --config=dev/csfixer.php_cs --dry-run --diff",
+        "analyse": "phpstan analyse -c dev/phpstan.neon --no-progress"
     },
     "conflict": {
         "symfony/symfony": "*"
