--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -34,3 +34,5 @@ jobs:
 
       - name: Code check
         run: composer check
+        env:
+          PHP_CS_FIXER_IGNORE_ENV: "true" # necessary until full PHP 8 support in php-cs-fixer
