execute phpunit tests during github workflow

--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -36,3 +36,6 @@ jobs:
         run: composer check
         env:
           PHP_CS_FIXER_IGNORE_ENV: "true" # necessary until full PHP 8 support in php-cs-fixer
+
+      - name: Tests
+        run: composer phpunit
