--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,8 @@
             "@analyse"
         ],
         "cs-check": "php-cs-fixer fix --config=dev/csfixer.php_cs --dry-run --diff",
-        "analyse": "phpstan analyse -c dev/phpstan.neon --no-progress"
+        "analyse": "phpstan analyse -c dev/phpstan.neon --no-progress",
+        "phpunit": "bin/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
