--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -15,6 +15,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         php: ['8.0']
+        phpuniturl: ["https://raw.githubusercontent.com/symfony/recipes/master/symfony/phpunit-bridge/4.3/bin/phpunit"]
+
     name: PHP ${{ matrix.php }} Test on ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -36,6 +38,22 @@ jobs:
         run: composer check
         env:
           PHP_CS_FIXER_IGNORE_ENV: "true" # necessary until full PHP 8 support in php-cs-fixer
+
+      - name: Check phpunit file existence
+        if: success()
+        id: check-files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "bin/phpunit"
+
+      - name: Get PHPUnit-Bridge Recipe
+        if: success() && steps.check-files.outputs.files_exists == 'false'
+        run: |
+          mkdir -p bin
+          cd bin
+          rm -f phpunit
+          wget ${{ matrix.phpuniturl }}
+          cd ../
 
       - name: Tests
         run: php bin/phpunit
