--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -28,6 +28,10 @@ jobs:
           php-version: ${{ matrix.php }}
           tools: composer
 
+      - name: Determine composer cache directory on Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: echo "COMPOSER_CACHE_DIR=$(composer config cache-dir)" >> $GITHUB_ENV
+
       - name: Validate composer.json and composer.lock
         run: composer validate
 
