--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -34,7 +34,7 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Tests
-        uses: php bin/phpunit
+        run: php bin/phpunit
 
       - name: Code check
         run: composer check
