--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -34,7 +34,7 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Tests
-        run: php bin/phpunit
+        run: php -d memory_limit=-1 ./vendor/bin/simple-phpunit
 
       - name: Code check
         run: composer check
