--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -40,7 +40,7 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - name: Tests
-        run: php ./bin/phpunit
+        run: composer phpunit
 
       - name: Code check
         run: composer check
