--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "friendsofphp/php-cs-fixer": "^v2.17.1",
         "phpstan/phpstan": "0.12.66",
         "phpstan/phpstan-phpunit": "0.12.17",
+        "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.2.*",
         "symfony/maker-bundle": "^1.25",
         "symfony/phpunit-bridge": "^5.2"
@@ -73,7 +74,7 @@
         ],
         "cs-check": "php-cs-fixer fix --config=dev/csfixer.php_cs --dry-run --diff",
         "analyse": "phpstan analyse -c dev/phpstan.neon --no-progress",
-        "phpunit": "php bin/phpunit"
+        "phpunit": "./vendor/bin/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
