execute phpunit tests during github workflow (#3)
* execute phpunit tests during github workflow

--- a/.github/workflows/validate-code.yml
+++ b/.github/workflows/validate-code.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         php: ['8.0']
+
     name: PHP ${{ matrix.php }} Test on ${{ matrix.os }}
     steps:
       - name: Checkout
@@ -29,13 +30,26 @@ jobs:
       - name: Validate composer.json and composer.lock
         run: composer validate
 
+      - name: Get Composer Cache Directory
+        id: composer-cache
+        run: |
+          echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest
+        run: composer install --prefer-dist --no-progress
+
+      - name: Tests
+        run: composer phpunit
 
       - name: Code check
         run: composer check
         env:
           PHP_CS_FIXER_IGNORE_ENV: "true" # necessary until full PHP 8 support in php-cs-fixer
-
-      - name: Tests
-        run: composer phpunit
