--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@
 /.php_cs
 /.php_cs.cache
 ###< friendsofphp/php-cs-fixer ###
-
+!/var/
+/var/*
+!/var/data/.gitignore
 ###> symfony/phpunit-bridge ###
 .phpunit
 .phpunit.result.cache
