add basic JWT authentication

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.2",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
+        "firebase/php-jwt": "^5.2",
         "nelmio/api-doc-bundle": "^4.1",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/asset": "5.2.*",
