--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,6 +13,8 @@ services:
   php:
     build:
       context: .
+      args:
+        - WITH_XDEBUG=true
     volumes:
       - ../:/var/www/html/
     depends_on:
