--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@
 !/var/
 /var/*
 !/var/data/.gitignore
-###> symfony/phpunit-bridge ###
-.phpunit
-.phpunit.result.cache
+
+###> phpunit/phpunit ###
 /phpunit.xml
-###< symfony/phpunit-bridge ###
+.phpunit.result.cache
+###< phpunit/phpunit ###
