--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "infection/infection": "^0.20.2",
         "phpstan/phpstan": "0.12.68",
         "phpstan/phpstan-phpunit": "0.12.17",
+        "phpstan/phpstan-symfony": "^0.12.14",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.2.*",
         "symfony/maker-bundle": "^1.25"
